made cell 'display: inline' to fix rendering bug on ie

--- a/src/KoGrid.css
+++ b/src/KoGrid.css
@@ -39,6 +39,7 @@
     overflow: hidden; 
     position: absolute;
     padding: 0 5px;
+    display: inline;
 }
 .kgRowIndexCell{ 
     background-color: rgb(237, 237, 237);
